--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 </head>
 <body>
     <h1 class="header">руддщ цщкдв!</h1 >
-        <div>12324124</div>
-        <div>12324124</div>
-        <div>12324124</div>
-        <div>12324124</div>
-        <div>12324124</div>
+        <div class="div1">12324124</div>
+        <div class="div2">12324124</div>
 </body>
 </html>
